[package]
name = "abc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.3.2"
diesel = { version = "1.4.4", features = ["sqlite", "r2d2"] }
r2d2 = "0.8.9"
rand = "0.8.4"
serde = "1.0.130"
serde_json = "1.0.68"
uuid = { version = "0.8.2", features = ["v4"] }

[features]
